# Paddle

./: CMakeLists.txt
cmake/: configure.cmake  third_party.cmake
paddle/fluid/framework/: dlpack_tensor.cc  tensor_util.cc  tensor_util.h
paddle/fluid/inference/: CMakeLists.txt
paddle/fluid/inference/analysis/: helper.h
paddle/fluid/inference/analysis/ir_passes/: CMakeLists.txt  ascendie_subgraph_pass.cc  (+1 more)
paddle/fluid/inference/api/: CMakeLists.txt  analysis_config.cc  analysis_predictor.cc  paddle_analysis_config.h  paddle_api.h  paddle_pass_builder.cc  paddle_pass_builder.h  paddle_tensor.h
paddle/fluid/inference/ascend/: engine.cc  engine.h
paddle/fluid/inference/ascendie/: CMakeLists.txt  engine.cc  engine.h  helper.h  op_teller.cc  op_teller.h
paddle/fluid/inference/ascendie/convert/: CMakeLists.txt  c_allreduce_op.cc  c_concat.cc  cast_op.cc  concat_op.cc  elementwise_op.cc  fill_any_like_op.cc  fill_constant_op.cc  gelu_op.cc  layer_norm_op.cc  logsigmoid_op.cc  lookup_table.cc  matrix_multiply_op.cc  op_converter.h  pad3d_op.cc  range_op.cc  scale_op.cc  set_value_op.cc  shape_op.cc  silu_op.cc  slice_op.cc  softmax_op.cc  split_op.cc  test_concat_op.cc  top_k_op.cc  transpose_op.cc  unsqueeze2_op.cc  ut_helper.h  where_op.cc
paddle/fluid/memory/: CMakeLists.txt  memcpy.cc
paddle/fluid/memory/allocation/: CMakeLists.txt  naive_best_fit_allocator.cc
paddle/fluid/platform/: place.cc  place.h
paddle/fluid/pybind/: inference_api.cc
paddle/phi/common/: backend.h  place.h
test/: CMakeLists.txt
test/cpp/inference/analysis/: CMakeLists.txt
(+2 files in other folders)
